[gd_scene load_steps=15 format=3 uid="uid://c68uqforao6ka"]

[ext_resource type="Script" uid="uid://b3rjxgb44mccs" path="res://UI/gui.gd" id="1_epgl5"]
[ext_resource type="AudioStream" uid="uid://fs3vhna1i2fr" path="res://art/Blip_select 23.wav" id="2_sj6ny"]
[ext_resource type="AudioStream" uid="uid://td2mgko63p61" path="res://art/gameover.wav" id="3_cwd3r"]

[sub_resource type="Animation" id="Animation_sj6ny"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cwd3r"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_epgl5"]
resource_name = "pop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 2.9281712, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.3490658503988659, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cwd3r"]
_data = {
&"RESET": SubResource("Animation_sj6ny"),
&"fade_out": SubResource("Animation_cwd3r"),
&"pop": SubResource("Animation_epgl5")
}

[sub_resource type="Animation" id="Animation_ddble"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 234)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScoreLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(118.5, 318)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverLabel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ScoreLabel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RestartLabel:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_yrla7"]
resource_name = "pop_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.23333329, 0.7333333, 0.8333333),
"transitions": PackedFloat32Array(1, 0.43527526, 1),
"update": 0,
"values": [Vector2(24, 720), Vector2(24, 220), Vector2(24, 250)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScoreLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.46666664, 0.8999999, 0.99999994),
"transitions": PackedFloat32Array(1, 1.0717716, 1),
"update": 0,
"values": [Vector2(118.5, 780), Vector2(118.5, 330), Vector2(118.5, 360)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverLabel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.23333329, 0.7333333, 0.8333333),
"transitions": PackedFloat32Array(1, 1.8025014, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ScoreLabel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.46666664, 0.8999999, 0.99999994),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RestartLabel:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9, 1),
"transitions": PackedFloat32Array(0.42044824, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ujs1"]
_data = {
&"RESET": SubResource("Animation_ddble"),
&"pop_in": SubResource("Animation_yrla7")
}

[sub_resource type="Animation" id="Animation_6ujs1"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InstructionLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.46666664, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wg577"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InstructionLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wpcnu"]
resource_name = "pop_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InstructionLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wpcnu"]
_data = {
&"RESET": SubResource("Animation_wg577"),
&"intro": SubResource("Animation_6ujs1"),
&"pop_out": SubResource("Animation_wpcnu")
}

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epgl5")

[node name="GameTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 15.0
offset_right = 36.0
offset_bottom = 75.0
grow_horizontal = 2
pivot_offset = Vector2(37, 31)
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TimerLabel"]
libraries = {
&"": SubResource("AnimationLibrary_cwd3r")
}

[node name="GameOverDisplay" type="Control" parent="."]
anchors_preset = 0

[node name="GameOverLabel" type="Label" parent="GameOverDisplay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 234.0
offset_right = 458.0
offset_bottom = 312.00073
grow_horizontal = 2
pivot_offset = Vector2(221, 39)
theme_override_font_sizes/font_size = 64
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="GameOverDisplay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 118.5
offset_top = 318.0
offset_right = 363.5
offset_bottom = 376.00024
grow_horizontal = 2
pivot_offset = Vector2(122.5, 29)
theme_override_font_sizes/font_size = 48
text = "Score: 33"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartLabel" type="Label" parent="GameOverDisplay"]
layout_mode = 0
offset_left = 131.0
offset_top = 465.0
offset_right = 351.0
offset_bottom = 504.0
pivot_offset = Vector2(118, 22)
theme_override_font_sizes/font_size = 32
text = "[R] to restart"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverDisplay"]
libraries = {
&"": SubResource("AnimationLibrary_6ujs1")
}

[node name="GameStartDisplay" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="GameStartDisplay"]
layout_mode = 0
offset_left = 15.0
offset_top = 257.0
offset_right = 469.0
offset_bottom = 315.0
pivot_offset = Vector2(243, 29)
theme_override_font_sizes/font_size = 48
text = "Dodge the Creeps"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="GameStartDisplay"]
layout_mode = 0
offset_left = 93.0
offset_top = 332.0
offset_right = 392.0
offset_bottom = 371.0
pivot_offset = Vector2(155, 19)
theme_override_font_sizes/font_size = 32
text = "Spacebar to Start"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameStartDisplay"]
libraries = {
&"": SubResource("AnimationLibrary_wpcnu")
}
autoplay = "intro"

[node name="BlipSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_sj6ny")
volume_db = -10.0

[node name="GameOverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cwd3r")
volume_db = -10.0

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
